--- a/docs/01_deploy_app_resources/0101.md
+++ b/docs/01_deploy_app_resources/0101.md
@@ -20,7 +20,7 @@ The key tasks are as follows:
 1. Fork [this GitHub repository](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins) to your account. You will need to fork the repo in order to modify and use GitHub Actions workflows in later tasks.
 
     <details markdown="block">
-    <summary>Expand this section to view the solution</summary>
+    <summary><strong>Expand this section to view the solution</strong></summary>
 
     In order to fork this repository, make sure that you are signed into GitHub with the account you would like to use. Then, select the **Fork** button.
 
@@ -66,7 +66,7 @@ The key tasks are as follows:
     > You may receive a message stating that it "Detected an Azure Functions Project" and asks if you wish to initialize it for optimal use with VS Code. It is safe to select **Yes** when you see this message. You will then **Overwrite** the tasks.json file.
 
     <details markdown="block">
-    <summary>Expand this section to view the solution</summary>
+    <summary><strong>Expand this section to view the solution</strong></summary>
 
     If you are creating a GitHub Codespace, select the **Code** button on your repository. Then, in the **Codespaces** tab, select the **Create codespace on main** button. This will instantiate a Codespace.
 
@@ -84,7 +84,7 @@ The key tasks are as follows:
       > A virtual environment (venv) is not absolutely necessary for this project but creating one will decrease the risk of library conflicts between this project and other Python projects you may have on your machine.
 
     <details markdown="block">
-    <summary>Expand this section to view the solution</summary>
+    <summary><strong>Expand this section to view the solution</strong></summary>
 
     To create a virtual environment, perform the following steps:
       - Open up a terminal to the root directory of your Git repo. **For example**, if you cloned the repo to `C:\SourceCode\TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins`, open this directory in a command prompt. If you are using GitHub Codespaces, open a new terminal in Visual Studio Code--this will default you to the correct directory.
@@ -104,7 +104,7 @@ The key tasks are as follows:
 4. Install all requirements in the file `src/ContosoSuitesDashboard/requirements.txt`.
 
     <details markdown="block">
-    <summary>Expand this section to view the solution</summary>
+    <summary><strong>Expand this section to view the solution</strong></summary>
 
     - In order to install requirements, make sure that you are in a terminal connected to your virtual environment. Then, navigate to the `src/ContosoSuitesDashboard` folder and execute the command `pip install -r requirements.txt`. This will take several minutes to install but will include all of the Python package requirements necessary for the workshop.
 
@@ -117,7 +117,7 @@ The key tasks are as follows:
     > **Important**: Abstractive summarization in the Azure AI Services Language service is only supported in a subset of regions. You must create your Azure AI Language service in one of the [supported regions](https://learn.microsoft.com/azure/ai-services/language-service/summarization/region-support) to allow abstractive summarization to be performed in a later exercise.
 
     <details markdown="block">
-    <summary>Expand this section to view the solution</summary>
+    <summary><strong>Expand this section to view the solution</strong></summary>
 
     To create a resource group using az cli, use the command `az group create`. An example of this is: `az group create -l eastus2 -n TechExcelTest`, which will create a resource group named `TechExcelTest`  in the East US 2 region.
 
@@ -134,7 +134,7 @@ The key tasks are as follows:
     > You may receive an error while running this that you must accept the Responsible AI Notice before creating a TextAnalytics (Language) service. To do so, open the [Azure Portal](https://portal.azure.com/) and search for "Language" in the menu. Choose the **Language** service and then select Create. On the first page of the form, select the **Continue to create your resource** button at the bottom of the screen. Then, check the box certifying that you have reviewed and acknowledge the terms in the Responsible AI Notice. You can then close the Create Language page and try running the Bicep script again.
 
     <details markdown="block">
-    <summary>Expand this section to view the solution</summary>
+    <summary><strong>Expand this section to view the solution</strong></summary>
 
     If you have Visual Studio Code installed, you can use the [Bicep extension](https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-bicep) to run Bicep scripts by doing the following:
       - Open the **src/InfrastructureAsCode/DeployAzureResources.bicep** script.
