--- a/docs/01_deploy_app_resources/0102.md
+++ b/docs/01_deploy_app_resources/0102.md
@@ -11,6 +11,8 @@ parent: 'Exercise 01: Deploy application resources'
 
 The ChatGPT series of models available in Azure OpenAI has been trained on a wide variety of datasets online, but these datasets tend to be publicly available. For private and proprietary datasets, we will need a different approach than to expect ChatGPT has the available information. In this second task of the exercise, we will push data into an Azure storage account and convert it into an Azure AI Search index.
 
+Before our GPT-4 model can reference our proprietary datasets, we first need to **vectorize** the data--that is, convert data inputs into a collection of floating-point numbers. We can store these vectorized results (also known as **embeddings**) in a variety of data stores. In this exercise, we will use Azure AI Search. Azure AI Search allows us to store not only the embeddings but also the raw text data. This will allow us to perform hybrid lookup operations--that is, keyword search against the raw text as well as vector search against the embeddings.
+
 ## Description
 
 In this task, you will load data that Contoso Suites staff has provided to you into Azure Blob Storage. This data contains a summary, in JSON format, of several of their resort properties and hotels located on the resorts. This is an example of the type of data the company would like to use to enhance chat results, so they would like you to incorporate this data into the Azure OpenAI proof of concept. You may find these files in [the src/data folder](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins/tree/main/src/data) for the repository.
@@ -20,7 +22,7 @@ The key tasks are as follows:
 1. Import the data from **Resorts.txt**, **Hotels.txt**, and **FAQ.txt** into a container named `contoso-suites`.
 
     <details markdown="block">
-    <summary>Expand this section to view the solution for importing data into storage accounts.</summary>
+    <summary><strong>Expand this section to view the solution</strong></summary>
 
     Make sure you use the storage account you created in exercise 1, as the storage account must be in the same region as Azure AI Search.
 
@@ -39,7 +41,7 @@ The key tasks are as follows:
 2. Create a `contoso-suites-faq` index in Azure AI Search, built on the three files in the `contoso-suites` container in your storage account. You should embed with `text-embedding-002-ada` and support Hybrid (Vector + Keyword) search.
 
     <details markdown="block">
-    <summary>Expand this section to view the solution for creating an Azure AI Search index.</summary>
+    <summary><strong>Expand this section to view the solution</strong></summary>
 
     - In [the Azure portal](https://portal.azure.com), navigate to the resource group you have created and select the **Search service** in the resource group.
     - In the **Settings** menu, select the **Identity** entry and make sure you are on the **System assigned** tab. Ensure that you have a system-assigned managed identity enabled.
@@ -93,7 +95,7 @@ The key tasks are as follows:
     > If you are using GitHub Codespaces, select the **Open in Browser** button when you receive an informational message that "Your application running on port 8501 is available."
 
     <details markdown="block">
-    <summary>Expand this section to view the solution for updating the front-end code.</summary>
+    <summary><strong>Expand this section to view the solution</strong></summary>
 
     - Create a file called `secrets.toml` in `src/ContosoSuitesDashboard/.streamlit/`. Copy the contents of `secrets.template.toml` as a starting point. Then, fill in the details from the Azure services you deployed.
       - For Azure OpenAI secrets:
