--- a/docs/01_deploy_app_resources/0103.md
+++ b/docs/01_deploy_app_resources/0103.md
@@ -28,7 +28,7 @@ The key tasks are as follows:
     Retain the JSON output to use in a GitHub Actions secret.
 
     <details markdown="block">
-    <summary>Expand this section to view the solution</summary>
+    <summary><strong>Expand this section to view the solution</strong></summary>
 
     - In [the Azure portal](https://portal.azure.com), navigate to the resource group you have created and select the **Container registry** in the resource group.
     - Navigate to the **Access keys** in the **Settings** menu and make note of your **Login server**, **Username**, and **password**. You will need these for GitHub Actions secrets. Also make note of the **Registry name** in order to modify the GitHub Actions workflows.
@@ -51,7 +51,7 @@ The key tasks are as follows:
     6. `APP_PREFIX` -- Paste in the unique identifier you used for your Azure resources.
 
     <details markdown="block">
-    <summary>Expand this section to view the solution</summary>
+    <summary><strong>Expand this section to view the solution</strong></summary>
 
     - To create a GitHub Actions secret, navigate to your forked GitHub repository and select the **Settings** menu. From there, navigate to **Secrets and variables** and select the **Actions** menu. You can then create new repository secrets.
 
@@ -67,6 +67,8 @@ The key tasks are as follows:
 
     - To create a GitHub Actions variable,  switch from the **Secrets** tab to the **Variables** tab. You can then create new repository variables.
 
+        KTODO: add Variable image
+
         ![Add a new GitHub Actions repository-level variable.](../../media/Solution/0103_Variables.png)
 
         You will need to create one variable:
@@ -79,7 +81,7 @@ The key tasks are as follows:
 5. Manually execute the GitHub Actions workflows named **API Deployment** and **Dashboard Deployment** if they do not run automatically.
 
     <details markdown="block">
-    <summary>Expand this section to view the solution</summary>
+    <summary><strong>Expand this section to view the solution</strong></summary>
 
     After committing and pushing your changes to the forked GitHub repository, navigate to the **Actions** menu. You will see two workflows, API Deployment and Dashboard Deployment. Select each in turn and select the **Run workflow** dropdown and choose **Run workflow** against your **main** branch.
 
@@ -95,7 +97,7 @@ The key tasks are as follows:
     > It may take several minutes for Azure Application Services to be ready to serve your dashboard website. If it does not come up within 5 minutes or so, you could choose to **Stop** and then **Start** the App Service.
 
     <details markdown="block">
-    <summary>Expand this section to view the solution</summary>
+    <summary><strong>Expand this section to view the solution</strong></summary>
 
     To find the URL of your dashboard, navigate to your resource group in [the Azure portal](https://portal.azure.com). Then, select the **App service** whose name ends with **-dash**. You can obtain the URL from the **Default domain** entry in the Essentials section.
 
