--- a/docs/02_implement_function_calls/0202.md
+++ b/docs/02_implement_function_calls/0202.md
@@ -11,6 +11,8 @@ parent: 'Exercise 02: Implement function calling'
 
 Using the Semantic Kernel library, you can translate natural language input into a function call. This allows organizations to extend existing code bases and APIs with a natural language front end.
 
+We currently have three Web API endpoints reading data from Azure SQL Database. In this task, you will create two additional endpoints for reading data, as well as a general-purpose endpoint to accept natural language input and return the appropriate output based on user request. This approach to querying data can be more intuitive for end users who have some familiarity with the specific capabilities of our API.
+
 ## Description
 
 In the prior task, you populated bookings history data in Azure SQL Database and built three endpoints on top of it. The Contoso Suites development team would like to continue building API endpoints, but want to take advantage of natural language capabilities to make front-end development easier. In this task, you will use the Semantic Kernel library to make the database service calls into kernel functions that can run based on user request.
@@ -18,12 +20,249 @@ In the prior task, you populated bookings history data in Azure SQL Database and
 The key tasks are as follows:
 
 1. Add three local secrets using `dotnet user-secrets`. They should be named `AzureOpenAI:DeploymentName`, `AzureOpenAI:Endpoint`, and `AzureOpenAI:ApiKey`, and these secret names are case-sensitive.
+
+    <details markdown="block">
+    <summary><strong>Expand this section to view the solution</strong></summary>
+
+    In order to add user secrets to your .NET project, open a console in the Web API directory containing your `ContosoSuitesWebAPI.csproj` file. Then, run the following commands, replacing the secret values with your actual endpoint and API key, respectively.
+
+    ```sh
+    dotnet user-secrets init
+    dotnet user-secrets set "AzureOpenAI:DeploymentName" "gpt-4o"
+    dotnet user-secrets set "AzureOpenAI:Endpoint" "{your_endpoint}"
+    dotnet user-secrets set "AzureOpenAI:ApiKey" "{your_key}"
+    ```
+
+    </details>
+
 2. The `DatabaseService` class and `IDatabaseService` interface have three methods associated with them. Contoso Suites would like to add two more methods. One will be called `GetBookingsMissingHotelRooms()` and will return all bookings that do not have associated hotel rooms. The second will be called `GetBookingsWithMultipleHotelRooms()` and will return all bookings with more than one hotel room. Neither method should take an input parameter, and you will not need to add explicit endpoints for these.
+
+    <details markdown="block">
+    <summary><strong>Expand this section to view the solution</strong></summary>
+
+    The code for the `GetBookingsMissingHotelRooms()` method is in the `DatabaseService` class as follows:
+
+    ```csharp
+        public async Task<IEnumerable<Booking>> GetBookingsMissingHotelRooms()
+        {
+            var sql = """
+                SELECT
+                    b.BookingID,
+                    b.CustomerID,
+                    b.HotelID,
+                    b.StayBeginDate,
+                    b.StayEndDate,
+                    b.NumberOfGuests
+                FROM dbo.Booking b
+                WHERE NOT EXISTS
+                    (
+                        SELECT 1
+                        FROM dbo.BookingHotelRoom h
+                        WHERE
+                            b.BookingID = h.BookingID
+                    );
+                """;
+            using var conn = new SqlConnection(
+                connectionString: Environment.GetEnvironmentVariable("SQLAZURECONNSTR_ContosoSuites")!
+            );
+            conn.Open();
+            using var cmd = new SqlCommand(sql, conn);
+            using var reader = await cmd.ExecuteReaderAsync();
+            var bookings = new List<Booking>();
+            while (await reader.ReadAsync())
+            {
+                bookings.Add(new Booking
+                {
+                    BookingID = reader.GetInt32(0),
+                    CustomerID = reader.GetInt32(1),
+                    HotelID = reader.GetInt32(2),
+                    StayBeginDate = reader.GetDateTime(3),
+                    StayEndDate = reader.GetDateTime(4),
+                    NumberOfGuests = reader.GetInt32(5)
+                });
+            }
+            conn.Close();
+    
+            return bookings;
+        }
+    ```
+  
+    The code for the `GetBookingsWithMultipleHotelRooms()` method in the `DatabaseService` class is as follows:
+  
+    ```csharp
+        public async Task<IEnumerable<Booking>> GetBookingsWithMultipleHotelRooms()
+        {
+            var sql = """
+                SELECT
+                    b.BookingID,
+                    b.CustomerID,
+                    b.HotelID,
+                    b.StayBeginDate,
+                    b.StayEndDate,
+                    b.NumberOfGuests
+                FROM dbo.Booking b
+                WHERE
+                    (
+                        SELECT COUNT(1)
+                        FROM dbo.BookingHotelRoom h
+                        WHERE
+                            b.BookingID = h.BookingID
+                    ) > 1;
+                """;
+            using var conn = new SqlConnection(
+                connectionString: Environment.GetEnvironmentVariable("SQLAZURECONNSTR_ContosoSuites")!
+            );
+            conn.Open();
+            using var cmd = new SqlCommand(sql, conn);
+            using var reader = await cmd.ExecuteReaderAsync();
+            var bookings = new List<Booking>();
+            while (await reader.ReadAsync())
+            {
+                bookings.Add(new Booking
+                {
+                    BookingID = reader.GetInt32(0),
+                    CustomerID = reader.GetInt32(1),
+                    HotelID = reader.GetInt32(2),
+                    StayBeginDate = reader.GetDateTime(3),
+                    StayEndDate = reader.GetDateTime(4),
+                    NumberOfGuests = reader.GetInt32(5)
+                });
+            }
+            conn.Close();
+    
+            return bookings;
+        }
+    ```
+
+    The new code for the `IDatabaseService` interface is as follows:
+
+    ```csharp
+    Task<IEnumerable<Booking>> GetBookingsMissingHotelRooms();
+    Task<IEnumerable<Booking>> GetBookingsWithMultipleHotelRooms();
+    ```
+
+    </details>
+
 3. Add the Semantic Kernel version 1.20.0 NuGet package to the Web API project.
+
+    <details markdown="block">
+    <summary><strong>Expand this section to view the solution</strong></summary>
+
+    To add the Semantic Kernel NuGet package, you can run the following command from the command line, in the Web API directory containing your `ContosoSuitesWebAPI.csproj` file.
+
+    ```powershell
+    dotnet add package Microsoft.SemanticKernel --version 1.20.0
+    ```
+
+    </details>
+
 4. Tag each of the methods in the `DatabaseService` class as kernel functions and provide a description for each method and input parameter.
+
+    <details markdown="block">
+    <summary><strong>Expand this section to view the solution</strong></summary>
+
+    In order to tag a method in the `DatabaseService.cs` file, you will need to include the `Microsoft.SemanticKernel` and `System.ComponentModel` namespaces at the top of the file, along with the other **using** statements.
+
+    ```csharp
+    using Microsoft.SemanticKernel;
+    using System.ComponentModel;
+    ```
+
+    Then, add `[KernelFunction]` and `[Description()]` descriptors to each of the five methods you want to be available for Semantic Kernel to call.   For example, the `GetHotels()` method   signature would look like:
+
+    ```csharp
+        [KernelFunction]
+        [Description("Get all hotels.")]
+        public async Task<IEnumerable<Hotel>> GetHotels()
+    ```
+
+    For methods with parameters, include as well a `[Description()]` descriptor for each parameter. For example, the `GetBookingsForHotel()` method   would look like:
+
+    ```csharp
+        [KernelFunction]
+        [Description("Get all bookings for a single hotel.")]
+        public async Task<IEnumerable<Booking>> GetBookingsForHotel(
+            [Description("The ID of the hotel")] int hotelId
+            )
+    ```
+
+    Make sure to do this for all five methods, including the two you created in Step 2 of this task.
+
+    </details>
+
 5. The `AppConfig.cs` file contains a simple configuration class. Update the `Program.cs` file to use this configuration class to build out a configuration. Add in any user secrets associated with the (implicit) `Program` class as well as environment variables, and then validate the configuration.
+
+    <details markdown="block">
+    <summary><strong>Expand this section to view the solution</strong></summary>
+
+    Add the Semantic Kernel namespaces we will need to the top of `Program.cs`:
+  
+    ```csharp
+    using Microsoft.SemanticKernel;
+    using Microsoft.SemanticKernel.Connectors.OpenAI;
+    using Microsoft.SemanticKernel.ChatCompletion;
+    ```
+
+    From there, after creating the **builder** object, add the following code:
+
+    ```csharp
+    var config = new ConfigurationBuilder()
+        .AddUserSecrets<Program>()
+        .AddEnvironmentVariables()
+        .Build();
+    ```
+
+    </details>
+
 6. In `Program.cs`, add a singleton of type `Microsoft.SemanticKernel.Kernel`. It should create an `IKernelBuilder` and then add Azure OpenAI chat completion, using the deployment name, endpoint, and API key from your configuration. It should also add as a plugin everything in the `DatabaseService` class.
+
+    <details markdown="block">
+    <summary><strong>Expand this section to view the solution</strong></summary>
+
+    The code to create a singleton `Kernel` is as follows, and should be added below the singleton builder for `CosmosClient`.
+
+    ```csharp
+    builder.Services.AddSingleton<Kernel>((_) =>
+    {
+        IKernelBuilder kernelBuilder = Kernel.CreateBuilder();
+        kernelBuilder.AddAzureOpenAIChatCompletion(
+            deploymentName: builder.Configuration["AzureOpenAI:DeploymentName"]!,
+            endpoint: builder.Configuration["AzureOpenAI:Endpoint"]!,
+            apiKey: builder.Configuration["AzureOpenAI:ApiKey"]!
+        );
+        kernelBuilder.Plugins.AddFromType<DatabaseService>();
+        return kernelBuilder.Build();
+    });
+    ```
+
+    </details>
+
 7. Implement the `/Chat` POST request. It should use the `Kernel` singleton and get chat message content from the chat completion service. Return to the end user `response?.Content!`.
+
+    <details markdown="block">
+    <summary><strong>Expand this section to view the solution</strong></summary>
+
+    The code to implement the `/Chat` POST request is as follows:
+
+    ```csharp
+    app.MapPost("/Chat", async Task<string> (HttpRequest request) =>
+    {
+        var message = await Task.FromResult(request.Form["message"]);
+        var kernel = app.Services.GetRequiredService<Kernel>();
+        var chatCompletionService = kernel.GetRequiredService<IChatCompletionService>();
+        var executionSettings = new OpenAIPromptExecutionSettings
+        {
+            ToolCallBehavior = ToolCallBehavior.AutoInvokeKernelFunctions
+        };
+        var response = await chatCompletionService.GetChatMessageContentAsync(message.ToString(), executionSettings, kernel);
+        return response?.Content!;
+    })
+        .WithName("Chat")
+        .WithOpenApi();
+    ```
+
+    </details>
+
 8. Run the Web API project and ensure that things work correctly. If you are using GitHub Codespaces, run the following command:
 
    ```bash
@@ -46,6 +285,25 @@ The key tasks are as follows:
 
     {: .important }
     > In a production environment, it would be better to save these as secrets in Azure Key Vault and then enable a managed identity to access the Key Vault secrets from your App Service. The reason for this is, with the current configuration, anyone with access to manage the App Service can view the deployment name, endpoint, and API key secrets.
+
+    <details markdown="block">
+    <summary><strong>Expand this section to view the solution</strong></summary>
+
+    In order to create an environment variable for your App Service, perform the following actions.
+    1. Navigate back to your resource group in the Azure Portal. Then, select the **App Service** named `{your_unique_id}-api`. In the **Settings**   menu, choose the **Environment variables** option. Then, navigate to the **App settings** tab and select the **Add** button.
+  
+      ![Creating a new environment variable for an Azure App Service](../../media/Solution/0202_AddEnvironmentVariable1.png)
+  
+    2. Create three environment variables. The first is `AzureOpenAI__DeploymentName` and should have a value of `gpt-4o`. The second is   `AzureOpenAI__Endpoint` and should have a value of your Azure OpenAI endpoint URL. The third is `AzureOpenAI__ApiKey` and should have a value of   your Azure OpenAI API key. After entering data for an application setting, select **Apply** to save the setting.
+  
+      ![Filling in details for the new environment variable for an Azure App Service](../../media/Solution/0201_AddEnvironmentVariable2.png)
+  
+    {: .note }
+    > These environment variables should have **two** underscores between "AzureOpenAI" and the name.
+
+    After creating the three application settings, select the **Apply** button to finish saving them. This will restart your API service.
+
+    </details>
 
 11. Test your deployed Streamlit application and ensure that it is able to answer user questions about bookings as expected.
 
@@ -70,219 +328,3 @@ The key tasks are as follows:
 ## Tips
 
 - The Semantic Kernel .NET library is rapidly changing, and some examples you may find online relate to the old methods for interacting with Semantic Kernel. Furthermore, if you are using GitHub Copilot to assist with development, it may provide you with code that no longer functions with recent versions of Semantic Kernel. Be sure to use recent code examples as guidance.
-
-## Solution
-
-<details markdown="block">
-<summary>Expand this section to view the solution</summary>
-
-- In order to add user secrets to your .NET project, open a console in the Web API directory containing your `ContosoSuitesWebAPI.csproj` file. Then, run the following commands, replacing the secret values with your actual endpoint and API key, respectively.
-
-  ```sh
-  dotnet user-secrets init
-  
-  dotnet user-secrets set "AzureOpenAI:DeploymentName" "gpt-4o"
-  dotnet user-secrets set "AzureOpenAI:Endpoint" "{your_endpoint}"
-  dotnet user-secrets set "AzureOpenAI:ApiKey" "{your_key}"
-  ```
-
-- The new code for the `IDatabaseService` interface is as follows:
-
-  ```csharp
-  Task<IEnumerable<Booking>> GetBookingsMissingHotelRooms();
-  Task<IEnumerable<Booking>> GetBookingsWithMultipleHotelRooms();
-  ```
-
-- The code for the `GetBookingsMissingHotelRooms()` method is in the `DatabaseService` class as follows:
-
-  ```csharp
-      public async Task<IEnumerable<Booking>> GetBookingsMissingHotelRooms()
-      {
-          var sql = """
-              SELECT
-                  b.BookingID,
-                  b.CustomerID,
-                  b.HotelID,
-                  b.StayBeginDate,
-                  b.StayEndDate,
-                  b.NumberOfGuests
-              FROM dbo.Booking b
-              WHERE NOT EXISTS
-                  (
-                      SELECT 1
-                      FROM dbo.BookingHotelRoom h
-                      WHERE
-                          b.BookingID = h.BookingID
-                  );
-              """;
-          using var conn = new SqlConnection(
-              connectionString: Environment.GetEnvironmentVariable("SQLAZURECONNSTR_ContosoSuites")!
-          );
-          conn.Open();
-          using var cmd = new SqlCommand(sql, conn);
-          using var reader = await cmd.ExecuteReaderAsync();
-          var bookings = new List<Booking>();
-          while (await reader.ReadAsync())
-          {
-              bookings.Add(new Booking
-              {
-                  BookingID = reader.GetInt32(0),
-                  CustomerID = reader.GetInt32(1),
-                  HotelID = reader.GetInt32(2),
-                  StayBeginDate = reader.GetDateTime(3),
-                  StayEndDate = reader.GetDateTime(4),
-                  NumberOfGuests = reader.GetInt32(5)
-              });
-          }
-          conn.Close();
-  
-          return bookings;
-      }
-  ```
-
-- The code for the `GetBookingsWithMultipleHotelRooms()` method in the `DatabaseService` class is as follows:
-
-  ```csharp
-      public async Task<IEnumerable<Booking>> GetBookingsWithMultipleHotelRooms()
-      {
-          var sql = """
-              SELECT
-                  b.BookingID,
-                  b.CustomerID,
-                  b.HotelID,
-                  b.StayBeginDate,
-                  b.StayEndDate,
-                  b.NumberOfGuests
-              FROM dbo.Booking b
-              WHERE
-                  (
-                      SELECT COUNT(1)
-                      FROM dbo.BookingHotelRoom h
-                      WHERE
-                          b.BookingID = h.BookingID
-                  ) > 1;
-              """;
-          using var conn = new SqlConnection(
-              connectionString: Environment.GetEnvironmentVariable("SQLAZURECONNSTR_ContosoSuites")!
-          );
-          conn.Open();
-          using var cmd = new SqlCommand(sql, conn);
-          using var reader = await cmd.ExecuteReaderAsync();
-          var bookings = new List<Booking>();
-          while (await reader.ReadAsync())
-          {
-              bookings.Add(new Booking
-              {
-                  BookingID = reader.GetInt32(0),
-                  CustomerID = reader.GetInt32(1),
-                  HotelID = reader.GetInt32(2),
-                  StayBeginDate = reader.GetDateTime(3),
-                  StayEndDate = reader.GetDateTime(4),
-                  NumberOfGuests = reader.GetInt32(5)
-              });
-          }
-          conn.Close();
-  
-          return bookings;
-      }
-  ```
-
-- To add the Semantic Kernel NuGet package, you can run the following command from the command line, in the Web API directory containing your `ContosoSuitesWebAPI.csproj` file.
-
-  ```powershell
-  dotnet add package Microsoft.SemanticKernel --version 1.20.0
-  ```
-
-- In order to tag a method in the `DatabaseService.cs` file, you will need to include the `Microsoft.SemanticKernel` and `System.ComponentModel` namespaces at the top of the file, along with the other **using** statements.
-
-  ```csharp
-  using Microsoft.SemanticKernel;
-  using System.ComponentModel;
-  ```
-  
-  Then, add `[KernelFunction]` and `[Description()]` descriptors to each of the five methods you want to be available for Semantic Kernel to call. For example, the `GetHotels()` method   signature would look like:
-  
-  ```csharp
-      [KernelFunction]
-      [Description("Get all hotels.")]
-      public async Task<IEnumerable<Hotel>> GetHotels()
-  ```
-  
-  For methods with parameters, include as well a `[Description()]` descriptor for each parameter. For example, the `GetBookingsForHotel()` method would look like:
-  
-  ```csharp
-      [KernelFunction]
-      [Description("Get all bookings for a single hotel.")]
-      public async Task<IEnumerable<Booking>> GetBookingsForHotel(
-          [Description("The ID of the hotel")] int hotelId
-          )
-  ```
-  
-  Make sure to do this for all five methods, including the two you created in Step 2 of this task.
-- Add the Semantic Kernel namespaces we will need to the top of `Program.cs`:
-
-  ```csharp
-  using Microsoft.SemanticKernel;
-  using Microsoft.SemanticKernel.Connectors.OpenAI;
-  using Microsoft.SemanticKernel.ChatCompletion;
-  ```
-  
-  From there, after creating the **builder** object, add the following code:
-  
-  ```csharp
-  var config = new ConfigurationBuilder()
-      .AddUserSecrets<Program>()
-      .AddEnvironmentVariables()
-      .Build();
-  ```
-
-- The code to create a singleton `Kernel` is as follows, and should be added below the singleton builder for `CosmosClient`.
-
-  ```csharp
-  builder.Services.AddSingleton<Kernel>((_) =>
-  {
-      IKernelBuilder kernelBuilder = Kernel.CreateBuilder();
-      kernelBuilder.AddAzureOpenAIChatCompletion(
-          deploymentName: builder.Configuration["AzureOpenAI:DeploymentName"]!,
-          endpoint: builder.Configuration["AzureOpenAI:Endpoint"]!,
-          apiKey: builder.Configuration["AzureOpenAI:ApiKey"]!
-      );
-      kernelBuilder.Plugins.AddFromType<DatabaseService>();
-      return kernelBuilder.Build();
-  });
-  ```
-
-- The code to implement the `/Chat` POST request is as follows:
-
-  ```csharp
-  app.MapPost("/Chat", async Task<string> (HttpRequest request) =>
-  {
-      var message = await Task.FromResult(request.Form["message"]);
-      var kernel = app.Services.GetRequiredService<Kernel>();
-      var chatCompletionService = kernel.GetRequiredService<IChatCompletionService>();
-      var executionSettings = new OpenAIPromptExecutionSettings
-      {
-          ToolCallBehavior = ToolCallBehavior.AutoInvokeKernelFunctions
-      };
-      var response = await chatCompletionService.GetChatMessageContentAsync(message.ToString(), executionSettings, kernel);
-      return response?.Content!;
-  })
-      .WithName("Chat")
-      .WithOpenApi();
-  ```
-
-- In order to create an environment variable for your App Service, perform the following actions.
-  - Navigate back to your resource group in the Azure Portal. Then, select the **App Service** named `{your_unique_id}-api`. In the **Settings** menu, choose the **Environment variables** option. Then, navigate to the **App settings** tab and select the **Add** button.
-
-    ![Creating a new environment variable for an Azure App Service](../../media/Solution/0202_AddEnvironmentVariable1.png)
-
-  - Create three environment variables. The first is `AzureOpenAI__DeploymentName` and should have a value of `gpt-4o`. The second is `AzureOpenAI__Endpoint` and should have a value of your Azure OpenAI endpoint URL. The third is `AzureOpenAI__ApiKey` and should have a value of your Azure OpenAI API key. After entering data for an application setting, select **Apply** to save the setting.
-
-    ![Filling in details for the new environment variable for an Azure App Service](../../media/Solution/0201_AddEnvironmentVariable2.png)
-
-    {: .note }
-    > These environment variables should have **two** underscores between "AzureOpenAI" and the name.
-
-    After creating the three application settings, select the **Apply** button to finish saving them. This will restart your API service.
-
-</details>
