--- a/docs/05_enhance_api_with_semantic_kernel/0501.md
+++ b/docs/05_enhance_api_with_semantic_kernel/0501.md
@@ -9,7 +9,7 @@ parent: 'Exercise 05: Enhance the API with Semantic Kernel orchestration'
 
 ## Introduction
 
-One of the primary features of Semantic Kernel is its ability to add different AI services to the kernel. It includes several built-in services from the Azure Open AI service, significantly simplifying interactions with the Azure OpenAI service from your applications. The Text Embedding Generator service can create vector embeddings like those generated to vectorize search queries when performing vector searches against data in Cosmos DB.
+One of the primary features of Semantic Kernel is its ability to add different AI services to the kernel. It includes several built-in services from the Azure Open AI service, significantly simplifying interactions with the Azure OpenAI service from your applications. The Text Embedding Generator service can create vector embeddings like those generated to vectorize search queries when performing vector searches against data in Cosmos DB. Instead of rolling your own embedding functionality, you can make use of Semantic Kernel's embedding capabilities. This reduces the level of development effort and also reduces the risk of introducing a bug via custom code.
 
 ## Description
 
